--- a/eclipse-workspace/springmvc/pom.xml
+++ b/eclipse-workspace/springmvc/pom.xml
@@ -36,7 +36,11 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -44,6 +48,17 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+    		<version>8.0.28</version> <!-- use the latest stable version -->
+		</dependency>
+		<dependency>
+    		<groupId>javax.xml.bind</groupId>
+    		<artifactId>jaxb-api</artifactId>
+    		<version>2.3.1</version> 
+		</dependency>
+		
 
 		<!-- CGLib for @Configuration -->
 		<dependency>
